--- a/index.html
+++ b/index.html
@@ -1,23 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/nav.css">
-    <link rel="stylesheet" href="styles/home.css">
-    <script src="script.js"></script>
-    <title>Document</title>
+  <title>Musique Developers</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="styles/home.css">
 </head>
-<body>
-    <div id="nav-bar">
-        <ul>
-            <img id="nav-hamburger" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/Hamburger_icon_white.svg/1024px-Hamburger_icon_white.svg.png" width="2.5%" style="float:left; padding: 5px;" onclick="test()">
-            <li><a class="active" href="#home">Home</a></li>
-            <li><a href="#status">Status</a></li>
-            <li><a href="#api" style="float: right;">API</a></li>
-            <p id="musique-developers">Musique Developers</p>
-          </ul>
+<body style="height:1500px">
+
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>                        
+            </button>
+            <a class="navbar-brand" href="#">Musique: Developers</a>
+          </div>
+          <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#">API</a></li>
+              <li><a href="#">Status</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Documentation <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                      <li><a href="#">Musique API/Status</a></li>
+                      <li><a href="#">About</a></li>
+                    </ul>
+                </li>
+              <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+              <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+
+
+<div class="container" style="margin-top:50px">
+  <h3>Lorem Ipsum</h3>
+  <div class="row">
+    <div class="col-md-4">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent auctor auctor ipsum, in porttitor magna auctor ut. Proin vehicula nec risus vitae ultricies.</p>
+      <p>Praesent sem massa, maximus sit amet lorem sed, facilisis rhoncus ligula. Donec tristique purus non magna efficitur, eu dictum elit euismod. Maecenas vitae fermentum arcu. Proin vitae massa eget ligula tempus feugiat id at justo. Nullam imperdiet feugiat justo, at fringilla tellus egestas ac.</p>    
     </div>
+</div>
+
 </body>
 </html>
